--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,14 @@
                                         <artifactId>sonar-maven-plugin</artifactId>
                                         <version>3.9.1.2184</version>
                                       </plugin>
+			  <plugin>
+               <groupId>io.snyk</groupId>
+                 <artifactId>snyk-maven-plugin</artifactId>
+                 <version>2.2.0</version>
+                 <inherited>false</inherited>
+                <configuration>
+		</configuration>
+    </plugin>
 		</plugins>
 	</build>
 
